name:                annotations
version:             0.1.0.0
-- synopsis:
-- description:
-- homepage:            https://github.com/githubuser/annotations#readme
license:             BSD3
license-file:        LICENSE
author:              Jean-Baptiste Mazon
-- maintainer:          example@example.com
copyright:           2017 JBM
-- category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable annotations
  main-is:             annotations.hs
  default-language:    Haskell2010
  build-depends:       base, cairo, pango, xml
